# legacy-cgi

./: README.rst  cgitb.py  pyproject.toml
.github/workflows/: ci.yml  unit-tests.yaml
cgi-bin/: crash_after_output.py  crash_before_output.py  crash_during_headers.py
docs/: cgi.rst  cgitb.rst  conf.py  index.rst
tests/: test_cgi.py  test_cgitb.py
