[project]
name = "legacy-cgi"
description = "Fork of the standard library cgi and cgitb modules removed in Python 3.13"
license = "PSF-2.0"
version = "2.6.3"
readme = "README.rst"
authors = [
    {name = "Guido van Rossum", email = "guido@python.org"},
    {name = "Andreas Paepcke", email = "paepcke@haddock.stanford.edu"},
    {name = "Steve Majewski", email = "sdm7g@virginia.edu"},
    {name = "Michael McLay", email = "mclay@eeel.nist.gov"},
]
maintainers = [
    {name = "Jack Rosenthal", email = "jack@rosenth.al"},
]
requires-python = '>=3.8'
dependencies = []

[project.urls]
repository = "https://github.com/jackrosenthal/legacy-cgi"

[tool.hatch.build.targets.sdist]
include = ["LICENSE", "README.rst", "cgi.py", "cgitb.py", "tests/*"]
exclude = [".gitignore"]

[tool.hatch.build.targets.wheel]
include = ["cgi.py", "cgitb.py"]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
